--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -25,6 +25,7 @@ $inkTextColor = $purple
 $secondaryTextColor = $greyPurple
 $placeholderTextColor = $purpleGrey
 $disabledTextColor = $blueGrey
+$introTextColor = $purpleGrey
 
 // Texts borders colors
 $introBorderLeftColor = $blueGrey
@@ -60,10 +61,6 @@ $sortIconColor = $lightOrange
 
 // Footer colors
 $footerTextColor = $blueGrey
-
-// Blockquote colors
-$blockquoteBackgroundColor = rgba($whitePurple, .5)
-$blockquotePagragraphBackgroundColor = $purple
 
 // Code colors
 $codeTextColor = $greyPurple
