:lipstick: remove li margin top for good
fix https://gitlab.hevaweb.com/data_science/missions/artemis-design/issues/1

--- a/src/styles/_typography.styl
+++ b/src/styles/_typography.styl
@@ -81,19 +81,19 @@ strong
       margin-top 0
       margin-bottom 0
 
+    li
+      margin-top 0
+
     ol
       list-style-type decimal
 
     ul
       list-style none
 
-      li
-        margin-top 0
-
-        &::before
-          content "-"
-          display inline-block
-          width 1em
+      li::before
+        content "-"
+        display inline-block
+        width 1em
 
 
 .intro, .conclusion, blockquote
