:zap: add button page

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -68,7 +68,12 @@ $codeBackgroundColor = $whitePurple
 
 // Button colors
 $buttonBorderColor = $lightOrange
-$buttonTextColor = $primaryColor
+$buttonTextColor = $inkTextColor
+$buttonDisabledColor = $blueGrey
+$buttonBackgroundColor = $lightOrange
+$buttonBackgroundHoverColor = #f86246 // blend light orange with itself at 20% opacity
+$buttonBackgroundActiveColor = #f1534c // blend light orange with itself at 40% opacity
+$buttonDisabledSecondaryColor = $whitePurple
 
 // Modebar colors
 $modebarFillColor = $secondaryColor
