--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -1,23 +1,60 @@
-.button,
-button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"]
-  display inline-block
-  height 38px
-  padding 0 30px
-  margin 5px 0
-  color $buttonTextColor
-  text-align center
-  font-size 11px
-  font-weight 600
-  line-height 38px
-  letter-spacing .1rem
-  text-transform uppercase
-  text-decoration none
-  white-space nowrap
-  background-color transparent
+button
+  border 1px $buttonBorderColor solid
   border-radius 4px
-  border 1px solid $buttonBorderColor
-  cursor pointer
-  box-sizing border-box
+  font-size 1.4rem
+  font-weight 700
+  letter-spacing 0
+  line-height 1.6rem
+  margin 0.8rem
+  outline none
+  white-space nowrap
+  display inline-block
+
+  &.default-button
+    color $buttonTextColor
+    background-color: $white
+
+    &:disabled, &[disabled=disabled]
+      border-color $buttonDisabledColor
+      color $disabledTextColor
+
+    &:hover:enabled, &:focus:enabled
+      color $primaryColor
+      background-color rgba($buttonBackgroundColor, 0.05)
+
+    &:active:enabled
+      color $primaryColor
+      background-color rgba($buttonBackgroundColor, 0.15)
+
+  &.secondary-button
+    color $white
+    background-color: $buttonBackgroundColor
+    border-color rgba(0, 0, 0, 0)
+
+    &:disabled
+      background-color $buttonDisabledSecondaryColor
+      color $disabledTextColor
+
+    &:hover:enabled, &:focus:enabled
+      background-color $buttonBackgroundHoverColor
+
+    &:active:enabled
+      background-color $buttonBackgroundActiveColor
+
+  &.button-large
+    border-radius 1000px
+    padding-left 1.6rem
+    padding-right 1.6rem
+    height 4.6rem
+
+
+  &.button-medium
+    padding-left 1.2rem
+    padding-right 1.2rem
+    height 4rem
+
+  &.button-small
+    padding-left .8rem
+    padding-right .8rem
+    height 3.2rem
+    font-size 1.2rem
