--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -9,6 +9,9 @@ button
   outline none
   white-space nowrap
   display inline-block
+  padding-left 1.2rem
+  padding-right 1.2rem
+  height 4rem
 
   &.default-button
     color $buttonTextColor
