--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -13,6 +13,9 @@ button
   padding-right 1.2rem
   height 4rem
 
+  span
+    margin 0 0.8rem
+
   &.default-button
     color $buttonTextColor
     background-color: $white
