:construction_worker: use linear gradient for background color

--- a/src/styles/_common.styl
+++ b/src/styles/_common.styl
@@ -1,5 +1,5 @@
 body
-  background-color $bodyBackgroundColor
+  background $bodyBackgroundColor
   margin 4rem 4rem 2rem 4rem
   color $inkTextColor
 
