--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -16,7 +16,7 @@ $secondaryColor = $purple
 
 
 // Body colors
-$bodyBackgroundColor = $secondaryColor
+$bodyBackgroundColor = linear-gradient(255.2deg, #A22257 0%, #2B1D46 100%)
 $bodySelectionBackgroundColor = $greyPurplePurple
 $contentBackgroundColor = $white
 
