--- a/src/styles/_typography.styl
+++ b/src/styles/_typography.styl
@@ -20,6 +20,9 @@ h1, h2, h3, h4, h5, h6
 h3, h4, h5, h6
   margin-top 3.2rem
 
+h4, h6
+  color $secondaryTextColor
+
 h1
   font-size 3.2rem
   color $primaryColor
@@ -28,13 +31,13 @@ h2
   font-size 1.8rem
 
 h3
-  font-size 3.2rem
+  font-size 2.6rem
 
 h4
-  font-size 2.4rem
+  font-size 2rem
 
 h5
-  font-size 2rem
+  font-size 1.6rem
 
 h6
   font-size 1.6rem
