--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -1,7 +1,7 @@
 .nav
   font-family $secondaryFont
   font-weight 700
-  text-align right
+  text-align left
   font-size 1.4rem
   line-height 1.6rem
 
@@ -9,7 +9,8 @@
     list-style-type none
     margin-bottom 1rem
     text-decoration none
-    font-size 1.6rem
+    font-size 1.4rem
+    line-height 2rem
 
     &.nav-item-focus a
       color $navItemHoverColor
