--- a/src/styles/components/_sidebar.styl
+++ b/src/styles/components/_sidebar.styl
@@ -8,13 +8,12 @@
 
   ul
     flex-direction column
-    margin-right 2rem
-    margin-left auto
+    margin-right 3rem
 
   .navbar
     display flex
     position sticky
-    top 4rem
+    top 3.2rem
     flex-direction column
 
     .nav-links
@@ -22,13 +21,13 @@
 
 .sidebar-logo
   max-width 100px
-  align-self flex-end
+  align-self flex-start
   margin-right 2rem
 
 .logo-client
   position fixed
   bottom 4rem
-  align-self flex-end
+  align-self flex-start
 
 
 @media (max-width: 960px)
