--- a/src/styles/_common.styl
+++ b/src/styles/_common.styl
@@ -1,6 +1,6 @@
 body
   background $bodyBackgroundColor
-  margin 3.2rem 3.2rem 3.2rem 3.2rem
+  margin 3.2rem 3.2rem 0 3.2rem
   color $inkTextColor
 
   ::-moz-selection, :selection
@@ -14,9 +14,11 @@ footer
   height 0
 
 .footer
-  text-align center
+  text-align right
   color $footerTextColor
-  height 2rem
+  height 3.2rem
+  font-size 1rem
+  line-height 2.4rem
 
   *
     margin-right: 1em
