:lipstick: fix button focus color

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -73,6 +73,7 @@ $buttonDisabledColor = $blueGrey
 $buttonBackgroundColor = $lightOrange
 $buttonBackgroundHoverColor = #f86246 // blend light orange with itself at 20% opacity
 $buttonBackgroundActiveColor = #f1534c // blend light orange with itself at 40% opacity
+$buttonBackgroundFocusColor = #DD255F
 $buttonDisabledSecondaryColor = $whitePurple
 
 // Modebar colors
