--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -1,3 +1,27 @@
+.btn-group
+  button, button.button-large, button.button-medium, button.button-small
+    border-radius 0
+    margin-left 0
+    margin-right 0
+    border-right none
+
+  button:first-of-type
+    border-top-left-radius 4px
+    border-bottom-left-radius 4px
+
+    &.button-large
+      border-top-left-radius 1000px
+      border-bottom-left-radius 1000px
+
+  button:last-of-type
+    border-top-right-radius 4px
+    border-bottom-right-radius 4px
+    border-right 1px $buttonBorderColor solid
+
+    &.button-large
+      border-top-right-radius 1000px
+      border-bottom-right-radius 1000px
+
 button
   border 1px $buttonBorderColor solid
   border-radius 4px
@@ -34,10 +58,13 @@ button
       i.icon
         color $disabledTextColor
 
-
-    &:hover:enabled, &:focus:enabled
+    &:hover:enabled
       color $primaryColor
       background-color rgba($buttonBackgroundColor, 0.05)
+
+    &:focus:enabled
+      color $primaryColor
+      background-color rgba($buttonBackgroundColor, 0.5)
 
       i.icon
         color $primaryColor
@@ -61,6 +88,9 @@ button
     &:hover:enabled, &:focus:enabled
       background-color $buttonBackgroundHoverColor
 
+    &:focus:enabled
+      background-color $buttonBackgroundFocusColor
+
     &:active:enabled
       background-color $buttonBackgroundActiveColor
 
@@ -70,7 +100,6 @@ button
     padding-right 1.6rem
     height 4.6rem
     padding-top 0.2rem
-
 
   &.button-medium
     padding-left 1.2rem
