--- a/src/styles/_typography.styl
+++ b/src/styles/_typography.styl
@@ -15,10 +15,11 @@ h1, h2, h3, h4, h5, h6
   line-height 1.2
   font-family $secondaryFont
   color $inkTextColor
+  margin-top 3.2rem
   margin-bottom 0
 
-h3, h4, h5, h6
-  margin-top 3.2rem
+h2:only-of-type
+  margin-bottom -3.2rem
 
 h4, h6
   color $secondaryTextColor
