:bug: fix elements margin inside buttons

--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -37,12 +37,13 @@ button
   height 4rem
 
   span
-    margin 0 0.8rem
+    margin 0 0.4rem
     vertical-align bottom
 
   i.icon
     font-size 1.6rem
-    margin 0
+    margin-left 0.4rem
+    margin-right 0.4rem
 
   &.default-button
     color $buttonTextColor
@@ -96,17 +97,17 @@ button
 
   &.button-large
     border-radius 1000px
-    padding-left 1.6rem
-    padding-right 1.6rem
+    padding-left 1.2rem
+    padding-right 1.2rem
     height 4.6rem
 
   &.button-medium
-    padding-left 1.2rem
-    padding-right 1.2rem
+    padding-left 0.8rem
+    padding-right 0.8rem
     height 4rem
 
   &.button-small
-    padding-left .8rem
-    padding-right .8rem
+    padding-left .4rem
+    padding-right .4rem
     height 3.2rem
     font-size 1.2rem
