:lipstick: new tabs style

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -48,9 +48,9 @@ $toolsBorderBottomColor = $white
 $toolsBoxShadowColor = rgba($purple, 0.05)
 
 // Tabs colors
-$tabsTextColor = $lightPurple
+$tabsTextColor = $greyPurple
 $tabsHoverTextColor = $secondaryColor
-$tabsBoxShadowColor = rgba($purple, 0.05)
+$tabsBorderColor = $blueGrey
 $tabsSelectedBorderColor = $primaryColor
 $tabsSelectedColor = $primaryColor
 
