--- a/src/styles/components/_tabs.styl
+++ b/src/styles/components/_tabs.styl
@@ -1,33 +1,31 @@
 #page-content
-  .custom-tab
-    display flex
-    flex-wrap wrap
-    font-family $secondaryFont
-    font-size 1.3rem
-    color $linkTextColor
-    padding 1.6rem
-    align-items center
-    justify-content center
-    border-bottom solid 4px transparent
-    border-top none
-    border-left none
-    border-right none
-    background-color transparent
+  .tab-container
+    margin-top 1.6rem
+    height 5.6rem
+    background-color #F4F4F7
+    background linear-gradient(180deg, rgba(201, 200, 214, 0) 0%, rgba(201, 200, 214, 0.15) 100%)
 
-  .custom-tab--selected
-    border-color $tabsSelectedBorderColor
-    color $tabsSelectedColor
+    .tab
+      display flex
+      padding 0
+      background-color transparent
+      border none
+      border-bottom solid $tableBorderColor 1px
 
-.tabs
-  box-shadow inset 0px -8px 8px $tabsBoxShadowColor
-  background-color $tabsBackgroundColor
-  border-bottom solid 1px $tabsBorderBottomColor
-  padding 0 4rem
-  margin 0 -4rem
+      span
+        margin auto
+        font-size 1.2rem
+        color $tabsTextColor
+        font-weight 700
+        line-height 1.6rem
+        letter-spacing 0
 
-.tab
-  margin 0
+      &.tab--selected
+        border-bottom-color $tabsSelectedBorderColor
 
-#page-content .custom-tab:focus,
-#page-content .custom-tab:hover
-  color $tabsHoverTextColor
+        span
+          color $tabsSelectedColor
+
+      &.tab--disabled
+        span
+          color $disabledTextColor
