:lipstick: add accordion section

--- a/src/styles/_typography.styl
+++ b/src/styles/_typography.styl
@@ -136,3 +136,20 @@ blockquote
 sup, sub
   font-weight 700
 
+.accordion
+  font-size 1.4rem
+  line-height 1.6rem
+  font-weight 700
+  color $secondaryTextColor
+
+  *
+    margin-top 1.6rem
+
+  &[open] .accordion-header
+    color $primaryColor
+
+  i
+    margin 0 1rem 0 0
+
+  .accordion-body
+    margin-left 1.6rem
