--- a/src/styles/components/_tabs.styl
+++ b/src/styles/components/_tabs.styl
@@ -8,6 +8,7 @@
     .tab
       display flex
       padding 0
+      margin 0
       background-color transparent
       border none
       border-bottom solid $tableBorderColor 1px
