:lipstick: add new notifier

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -90,10 +90,9 @@ $containerBackgroundColor = $whitePurple
 $navItemHoverColor = $white
 
 // Notifier colors
-$notifierBackgroundColor = $secondaryColor
-$notifierBorderColor = $primaryColor
+$notifierBackgroundColor = rgba(43,29,70,0.9)
 $notifierTextColor = $white
-$notifierCloseTextColor = $primaryColor
+$notifierCloseTextColor = $white
 
 // Sliders colors
 $sliderBackgroundColor = rgba($lightOrange, 0.4)
