--- a/src/styles/components/_notifier.styl
+++ b/src/styles/components/_notifier.styl
@@ -1,13 +1,34 @@
-.plotly-notifier
-  background-color $notifierBackgroundColor
-
 .notifier-note
   background-color $notifierBackgroundColor !important
-  border solid $notifierBorderColor 3px !important
+  border none !important
+  padding 1.6rem
+  border-radius 4px
 
   p
     color $notifierTextColor
     font-family $primaryFont
+    font-size 1.4rem
+    line-height 1.6rem
+    text-align left
+    margin-top 0
 
   .notifier-close
+    position relative
+    margin-right -0.4rem
+    margin-top -0.4rem
+    padding 0
     color $notifierCloseTextColor
+    height 20px
+    opacity 0.8
+    float right
+    font-size 20px
+    font-weight 400
+    line-height 20px
+    background none
+    border-width initial
+    border-style none
+    border-color initial
+    border-image initial
+
+    &:hover
+      color $primaryColor !important
