:lipstick: add new datatable

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -55,8 +55,12 @@ $tabsSelectedBorderColor = $primaryColor
 $tabsSelectedColor = $primaryColor
 
 // Table colors
-$tableBorderColor = $borderColor
-$sortIconColor = $lightOrange
+$tableBorderColor = rgba($borderColor, 0.5)
+$tableBackgroundColor = $white
+$rowBackgroundHoverColor = rgba($whitePurple, 0.5)
+$headerBackgroundColor = rgba($whitePurple, 0.5)
+$sortIconColor = $greyPurple
+$sortIconActiveColor = $lightOrange
 
 
 // Footer colors
