--- a/src/styles/components/_graphs.styl
+++ b/src/styles/components/_graphs.styl
@@ -1,4 +1,4 @@
-.graph, .two-graphs, .tools, .custom-tabs-container, .dash-table-container
+.graph, .two-graphs, .tools, .custom-tabs-container
   background-color $containerBackgroundColor
   padding 2rem 4rem
   margin 0 -4rem
@@ -17,7 +17,7 @@
   justify-content: center;
 
 @media (max-width: 960px)
-  .graph, .two-graphs, .tools, .custom-tabs-container, .dash-table-container
+  .graph, .two-graphs, .tools, .custom-tabs-container
     margin 0 -2rem 0 -2rem
 
 .graph
