--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -75,6 +75,7 @@ $buttonBorderColor = $lightOrange
 $buttonTextColor = $inkTextColor
 $buttonDisabledColor = $blueGrey
 $buttonBackgroundColor = $lightOrange
+$buttonSecondaryBackgroundColor = $orange
 $buttonBackgroundHoverColor = #f86246 // blend light orange with itself at 20% opacity
 $buttonBackgroundActiveColor = #f1534c // blend light orange with itself at 40% opacity
 $buttonBackgroundFocusColor = #DD255F
