--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -71,15 +71,22 @@ $codeTextColor = $greyPurple
 $codeBackgroundColor = $whitePurple
 
 // Button colors
-$buttonBorderColor = $lightOrange
 $buttonTextColor = $inkTextColor
+
+$buttonBackgroundColor = $whitePurple
+$buttonBorderColor = $blueGrey
 $buttonDisabledColor = $blueGrey
-$buttonBackgroundColor = $lightOrange
-$buttonSecondaryBackgroundColor = $orange
-$buttonBackgroundHoverColor = #f86246 // blend light orange with itself at 20% opacity
-$buttonBackgroundActiveColor = #f1534c // blend light orange with itself at 40% opacity
-$buttonBackgroundFocusColor = #DD255F
+$buttonBackgroundHoverColor = rgba($primaryColor, 0.05)
+$buttonBackgroundActiveColor = rgba($primaryColor, 0.1)
+$buttonBackgroundFocusColor = $lightOrange
+$buttonBorderEnabledColor = $primaryColor
+
+$buttonSecondaryBackgroundColor = $lightOrange
+$buttonSecondaryBorderColor = $orange
 $buttonDisabledSecondaryColor = $whitePurple
+$buttonSecondaryBackgroundHoverColor = #f86246 // blend light orange with itself at 20% opacity
+$buttonSecondaryBackgroundActiveColor = #f1534c // blend light orange with itself at 40% opacity
+$buttonSecondaryBackgroundFocusColor = #DD255F
 
 // Modebar colors
 $modebarFillColor = $secondaryColor
