--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -32,6 +32,13 @@ $introBorderLeftColor = $blueGrey
 $blockquoteBorderLeftColor = $blueGrey
 $conclusionBorderLeftColor = $primaryColor
 
+// Inputs
+$inputTextColor = $greyPurple
+$inputBorderColor = $blueGrey
+$focusHaloColor = rgba($lightOrange, 0.2)
+$chipBackgroundColor = $whitePurple
+$chipHoverColor = $primaryColor
+$inputHoverBackgroundColor = rgba($primaryColor, 0.05)
 
 // Action colors
 $linkTextColor = $greyPurple
