:bug: fix tab visual
see https://gitlab.hevaweb.com/web/dashboard-template/issues/43

--- a/src/styles/components/_tabs.styl
+++ b/src/styles/components/_tabs.styl
@@ -15,7 +15,7 @@
 
       span
         margin auto
-        font-size 1.2rem
+        font-size 1.4rem
         color $tabsTextColor
         font-weight 700
         line-height 1.6rem
@@ -26,6 +26,9 @@
 
         span
           color $tabsSelectedColor
+
+      &:hover span
+        color $tabsSelectedColor
 
       &.tab--disabled
         span
