--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -78,8 +78,7 @@ $codeTextColor = $greyPurple
 $codeBackgroundColor = $whitePurple
 
 // Button colors
-$buttonTextColor = $inkTextColor
-
+$buttonTextColor = $secondaryTextColor
 $buttonBackgroundColor = $whitePurple
 $buttonBorderColor = $blueGrey
 $buttonDisabledColor = $blueGrey
