:zap: improve table pagination

--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -59,6 +59,20 @@
       padding 0 0.4rem
 
   .previous-next-container
+    font-family $primaryFont
+    font-weight bold
+    font-size 1.2rem
+
+    button
+      width 3.2rem
+      height 3.2rem
+      margin 0.25rem
+
+    .page-number
+      margin-left 1.35rem
+      margin-right 1.35rem
+      *
+        margin 0
 
     .first-page, .previous-page, .next-page, .last-page
       &:enabled
