--- a/src/styles/components/_tabs.styl
+++ b/src/styles/components/_tabs.styl
@@ -28,7 +28,7 @@
           color $tabsSelectedColor
 
       &:hover span
-        color $tabsSelectedColor
+        color $tabsHoverTextColor
 
       &.tab--disabled
         span
