--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -56,7 +56,7 @@ $toolsBoxShadowColor = rgba($purple, 0.05)
 
 // Tabs colors
 $tabsTextColor = $greyPurple
-$tabsHoverTextColor = $secondaryColor
+$tabsHoverTextColor = $primaryColor
 $tabsBorderColor = $blueGrey
 $tabsSelectedBorderColor = $primaryColor
 $tabsSelectedColor = $primaryColor
