--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -14,6 +14,10 @@
       font-weight bold
       letter-spacing 0
       line-height 1.4rem
+      &:hover
+        color $primaryColor
+        background-color $buttonBackgroundHoverColor
+        border-color blend(rgba($buttonBorderEnabledColor, 0.5))
 
 
   table
