:sparkles: add sliders components

--- a/src/styles/_inputs.styl
+++ b/src/styles/_inputs.styl
@@ -148,3 +148,10 @@
       background-color $inputHoverBackgroundColor
       color $primaryColor
 
+  .group-radio-check
+    display flex
+    justify-content space-between
+
+    input[type="radio"], input[type="checkbox"]
+      margin-right 0.8rem
+
