--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -116,8 +116,9 @@ $notifierCloseTextColor = $white
 $sliderBackgroundColor = rgba($lightOrange, 0.4)
 $sliderBorderColor = $lightOrange
 $sliderTextColoractive = $primaryColor
-$sliderTextColor = $lightPurple
+$sliderTextColor = $greyPurple
 $sliderRailBackground = $whitePurple
+$sliderTooltipBackgroundColor = $purple
 
 $sliderBackgroundDisabledColor = $blueGrey
 $sliderBorderDisabledColor = $blueGrey
