--- a/src/styles/_common.styl
+++ b/src/styles/_common.styl
@@ -39,3 +39,10 @@ code
   color $codeTextColor
   background $codeBackgroundColor
   border-radius 4px
+
+#page-content
+  figcaption
+    margin-top 0.8rem
+    text-align center
+    font-size 1.6rem
+    line-height 2.4rem
