--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -128,3 +128,6 @@ $sliderRailDisabledBackground = $whitePurple
 // Specific colors
 $embeddedImgBordercolor = $purpleGrey
 $paperBackgroundColor = $whitePurple
+
+// Cards
+$cardBoxShadowColor = rgba($secondaryColor,0.18)
