:bug: remove tooltip box-shadow

--- a/src/styles/components/_sliders.styl
+++ b/src/styles/components/_sliders.styl
@@ -72,6 +72,7 @@
       font-size 1rem
       vertical-align center
       font-weight bold
+      box-shadow none
 
     .rc-slider-tooltip-arrow
       display none
