:bug: fix tooltip background color

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -118,7 +118,7 @@ $sliderBorderColor = $lightOrange
 $sliderTextColoractive = $primaryColor
 $sliderTextColor = $greyPurple
 $sliderRailBackground = $whitePurple
-$sliderTooltipBackgroundColor = $purple
+$sliderTooltipBackgroundColor = rgba($purple, .8)
 
 $sliderBackgroundDisabledColor = $blueGrey
 $sliderBorderDisabledColor = $blueGrey
