--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -18,34 +18,36 @@
   button:last-of-type
     border-top-right-radius 4px
     border-bottom-right-radius 4px
-    border-right 1px $buttonBorderColor solid
 
     &.button-large
       border-top-right-radius 1000px
       border-bottom-right-radius 1000px
 
 button
+  display flex
   border 1px $buttonBorderColor solid
   border-radius 4px
   font-size 1.4rem
   font-weight 700
-  letter-spacing 0
   line-height 1.6rem
   margin 0.8rem
   outline none
   white-space nowrap
-  padding-left 1.2rem
-  padding-right 1.2rem
+  padding-left 1.6rem
+  padding-right 1.6rem
   height 4rem
 
-  span
-    margin 0 0.4rem
-    vertical-align bottom
+  span, i
+    margin auto 0.4rem
+
+    &:first-child
+      margin-left 0
+
+    &:last-child
+      margin-right 0
 
   i.icon
     font-size 1.6rem
-    margin-left 0.4rem
-    margin-right 0.4rem
 
   &.default-button
     color $buttonTextColor
@@ -113,7 +115,6 @@ button
       color $purpleGrey
 
     &:disabled, &[disabled=disabled]
-      //border-color $buttonDisabledColor
       color $disabledTextColor
 
       i.icon
@@ -121,25 +122,23 @@ button
 
     &:hover:enabled, &:focus:enabled, &:focus:enabled
       color $primaryColor
-      //background-color $buttonBackgroundHoverColor
-      //border-color rgba($buttonBorderEnabledColor, 0.5)
 
       i.icon
         color $primaryColor
 
   &.button-large
     border-radius 1000px
-    padding-left 1.2rem
-    padding-right 1.2rem
+    padding-left 1.6rem
+    padding-right 1.6rem
     height 4.6rem
 
   &.button-medium
-    padding-left 0.8rem
-    padding-right 0.8rem
+    padding-left 1.2rem
+    padding-right 1.2rem
     height 4rem
 
   &.button-small
-    padding-left .4rem
-    padding-right .4rem
+    padding-left .8rem
+    padding-right .8rem
     height 3.2rem
     font-size 1.2rem
