--- a/src/styles/_buttons.styl
+++ b/src/styles/_buttons.styl
@@ -142,3 +142,25 @@ button
     padding-right .8rem
     height 3.2rem
     font-size 1.2rem
+
+
+#rgpd-banner button
+  font-size 1.4rem
+  font-weight 700
+  line-height 3.4rem
+  padding-left 1.2rem
+  padding-right 1.2rem
+  height 4rem
+  color $buttonTextColor
+  background-color: $buttonBackgroundColor
+
+  &:hover
+    color $primaryColor
+    background-color $buttonBackgroundHoverColor
+    border-color blend(rgba($buttonBorderEnabledColor, 0.5))
+
+  &:focus
+    background-color $buttonBackgroundFocusColor
+    border-color $buttonBorderEnabledColor
+    color $white
+
