--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -43,6 +43,17 @@
         background-color $headerBackgroundColor
         border-radius 4px
         padding 0 1.2rem
+        display flex
+        flex-direction row-reverse
+        align-items flex-start
+        justify-content space-between
+
+        span.column-header-name
+          box-sizing border-box
+          flex-wrap wrap
+          text-overflow ellipsis
+          overflow hidden
+          white-space nowrap
 
         span.column-header--sort
           float right
