:lipstick: fix datatable export button

--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -4,7 +4,6 @@
     margin-left auto
 
     button
-      //box-sizing border-box
       height 3.2rem
       border 1px solid $borderColor
       border-radius: 8px
@@ -13,7 +12,9 @@
       font-size 1.2rem
       font-weight bold
       letter-spacing 0
-      line-height 1.4rem
+      line-height 3rem
+      margin-right 0
+      cursor pointer
       &:hover
         color $primaryColor
         background-color $buttonBackgroundHoverColor
