--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -54,6 +54,7 @@
           text-overflow ellipsis
           overflow hidden
           white-space nowrap
+          margin-right auto
 
         span.column-header--sort
           margin-left 0.5rem
