--- a/src/styles/_inputs.styl
+++ b/src/styles/_inputs.styl
@@ -35,6 +35,13 @@
   textarea
     padding-top 1.2rem
 
+  .has-icon-left
+    .form-icon
+      left 1rem
+
+    input[type="text"]
+      padding-left 3rem
+
   input[type="text"], textarea
     border-style solid
     border-width 1px
