--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -17,7 +17,7 @@ $secondaryColor = $purple
 
 // Body colors
 $bodyBackgroundColor = linear-gradient(270deg, #A22257 0%, #2B1D46 100%)
-$bodySelectionBackgroundColor = $greyPurplePurple
+$bodySelectionBackgroundColor = $greyPurple
 $contentBackgroundColor = $white
 
 // Texts colors
@@ -66,6 +66,7 @@ $tableBorderColor = rgba($borderColor, 0.5)
 $tableBackgroundColor = $white
 $rowBackgroundHoverColor = rgba($whitePurple, 0.5)
 $headerBackgroundColor = rgba($whitePurple, 0.5)
+$tableButtonTextColor = $greyPurple
 $sortIconColor = $greyPurple
 $sortIconActiveColor = $lightOrange
 
