:bug: fix misaligned headers w/ fixed_columns
fix https://gitlab.hevaweb.com/data_science/missions/artemis-design/-/issues/13

--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -65,7 +65,7 @@ $tabsSelectedColor = $primaryColor
 $tableBorderColor = rgba($borderColor, 0.5)
 $tableBackgroundColor = $white
 $rowBackgroundHoverColor = rgba($whitePurple, 0.5)
-$headerBackgroundColor = rgba($whitePurple, 0.5)
+$headerBackgroundColor = blend(rgba($whitePurple, 0.5))
 $tableButtonTextColor = $greyPurple
 $sortIconColor = $greyPurple
 $sortIconActiveColor = $lightOrange
