:lipstick: fix tr height

--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -30,6 +30,7 @@
 
     tr
       background-color $tableBackgroundColor
+      height 3.2rem
 
       &:hover td
         background-color $rowBackgroundHoverColor !important
