--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -35,7 +35,7 @@ $conclusionBorderLeftColor = $primaryColor
 // Inputs
 $inputTextColor = $greyPurple
 $inputBorderColor = $blueGrey
-$focusHaloColor = rgba($lightOrange, 0.2)
+$focusHaloColor = blend(rgba($lightOrange, 0.2))
 $chipBackgroundColor = $whitePurple
 $chipHoverColor = $primaryColor
 $inputHoverBackgroundColor = rgba($primaryColor, 0.05)
@@ -114,11 +114,11 @@ $notifierTextColor = $white
 $notifierCloseTextColor = $white
 
 // Sliders colors
-$sliderBackgroundColor = rgba($lightOrange, 0.4)
+$sliderBackgroundColor = blend(rgba($lightOrange, 0.4))
 $sliderBorderColor = $lightOrange
 $sliderTextColoractive = $primaryColor
 $sliderTextColor = $greyPurple
-$sliderRailBackground = $whitePurple
+$sliderRailBackground = $lightPurple
 $sliderTooltipBackgroundColor = rgba($purple, .8)
 
 $sliderBackgroundDisabledColor = $blueGrey
